@@ -31,20 +31,20 @@ public class XSDoubleStrategyTest extends TestSchema {
      * Test method for 'org.geotools.xml.strategies.xs.XSDoubleStrategy.parse(Element, Node[], Object)'
      */
     public void testParse() throws Exception {
-        validateValues("-1E4", new Double(-1E4));
-        validateValues("1267.43233E12", new Double(1267.43233E12));
-        validateValues("12.78e-2", new Double(12.78e-2));
-        validateValues("12", new Double(12));
-        validateValues("-0", new Double("-0"));
-        validateValues("0", new Double(0));
+        validateValues("-1E4", Double.valueOf(-1E4));
+        validateValues("1267.43233E12", Double.valueOf(1267.43233E12));
+        validateValues("12.78e-2", Double.valueOf(12.78e-2));
+        validateValues("12", Double.valueOf(12));
+        validateValues("-0", Double.valueOf("-0"));
+        validateValues("0", Double.valueOf(0));
 
         ElementInstance element = element("INF", XS.DOUBLE);
-        assertEquals(new Double(Double.POSITIVE_INFINITY), strategy.parse(element, "INF"));
+        assertEquals(Double.valueOf(Double.POSITIVE_INFINITY), strategy.parse(element, "INF"));
     }
 
     public void testIntegerParse() throws Exception {
         ElementInstance element = element("12345", XS.INTEGER);
-        assertEquals(new Double(12345.0), strategy.parse(element, "12345"));
+        assertEquals(Double.valueOf(12345.0), strategy.parse(element, "12345"));
     }
 
     protected QName getQName() {
