@@ -35,7 +35,7 @@ public class AddImplTest extends TestCase {
 
     public void testEvaluate() {
         Object result = add.evaluate(null);
-        assertEquals(new Double(3), result);
+        assertEquals(Double.valueOf(3), result);
     }
 
     public void testEvaluateAsInteger() {
