@@ -41,7 +41,7 @@ public class Collection_FunctionsTest extends FunctionTestSupport {
     }
 
     public void testAverage() throws Exception {
-        performNumberTest("Collection_Average", new Double(33.375));
+        performNumberTest("Collection_Average", Double.valueOf(33.375));
     }
 
     public void testCount() throws Exception {
@@ -53,7 +53,7 @@ public class Collection_FunctionsTest extends FunctionTestSupport {
     }
 
     public void testMedian() throws Exception {
-        performNumberTest("Collection_Median", new Double(24.5));
+        performNumberTest("Collection_Median", Double.valueOf(24.5));
     }
 
     public void testMax() throws Exception {
