@@ -831,7 +831,7 @@ public class MBObjectParser {
                     Object value = array.get(i);
                     if (Number.class.isAssignableFrom(type) && value instanceof Number) {
                         if (type == Double.class) {
-                            returnArray[i] = (T) new Double(((Number) value).doubleValue());
+                            returnArray[i] = (T) Double.valueOf(((Number) value).doubleValue());
                             continue;
                         } else if (type == Integer.class) {
                             returnArray[i] = (T) Integer.valueOf(((Number) value).intValue());
